--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <body>
     <!-- Pre Loader -->
     <div id="dvLoading"></div>
-   
+
 
     <!-- Start breadcrumbs Section -->
     <section class="breadcrumbs-sec">
@@ -35,16 +35,16 @@
                     </div>
                     <div class="d-flex position-static menu-sec">
                         <!-- main menu area -->
-                     <nav class="main-menu-area ml-auto mobile-menu-active">
-                        <ul class="main-menu">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="about-us.html">About Us</a></li>
-                            <li><a href="services.html">Services</a></li>
-                            <li><a href="faq.html">FAQ's</a></li>
-                            <li class="active"><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                     <!-- main menu area end -->
+                        <nav class="main-menu-area ml-auto mobile-menu-active">
+                            <ul class="main-menu">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="faq.html">FAQ's</a></li>
+                                <li class="active"><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                        <!-- main menu area end -->
                         <!-- Mobile Menu Container -->
                         <div class="mobile-menu-container"><span class="sr-only">Mobile Menu Will Come Here.</span>
                         </div>
@@ -74,42 +74,51 @@
                         <div class="row clearfix">
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="text" id="name" name="name" class="form-control" placeholder="Full name" required="">
+                                    <input type="text" id="name" name="name" class="form-control"
+                                        placeholder="Full name" required="">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="email" id="email" name="email" class="form-control" placeholder="Email Address" required="">
+                                    <input type="email" id="email" name="email" class="form-control"
+                                        placeholder="Email Address" required="">
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="text" id="phone" name="phone" class="form-control" placeholder="Phone No :" required="" onkeypress="return isNumberKey(event)">
+                                    <input type="text" id="phone" name="phone" class="form-control"
+                                        placeholder="Phone No :" required="" onkeypress="return isNumberKey(event)">
                                     <script>
-                                        function isNumberKey(evt){
-                                  var charCode = (evt.which) ? evt.which : event.keyCode
-                                  if (charCode > 31 && (charCode < 48 || charCode > 57))
-                                    return false;
-                                  return true;
+                                        function isNumberKey(evt) {
+                                            var charCode = (evt.which) ? evt.which : event.keyCode
+                                            if (charCode > 31 && (charCode < 48 || charCode > 57))
+                                                return false;
+                                            return true;
                                         }    
-                                  </script>
+                                    </script>
                                 </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="form-group">
-                                    <input type="text" id="subject" name="subject" class="form-control" placeholder="Subject" required="">
+                                    <input type="text" id="subject" name="subject" class="form-control"
+                                        placeholder="Subject" required="">
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <textarea name="message" id="message" rows="5" class="form-control" placeholder="Message" required=""></textarea>
+                                    <textarea name="message" id="message" rows="5" class="form-control"
+                                        placeholder="Message" required=""></textarea>
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <div class="form-group mb-10">
                                     <button class="btn" id="submitbtn" type="submit">send message</button>
-                                    <div id="successmsg" class="hidden solid #bcbcbc alert alert-success mt-3"> <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> Thank you for contacting us!</div>
-                                    <div id="errormsg" class="hidden solid #bcbcbc alert alert-danger mt-3"> <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> Failed to submit the form. Try again. </div>	
+                                    <div id="successmsg" class="hidden solid #bcbcbc alert alert-success mt-3"> <a
+                                            href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                                        Thank you for contacting us!</div>
+                                    <div id="errormsg" class="hidden solid #bcbcbc alert alert-danger mt-3"> <a href="#"
+                                            class="close" data-dismiss="alert" aria-label="close">&times;</a> Failed to
+                                        submit the form. Try again. </div>
                                 </div>
                             </div>
                         </div>
@@ -123,16 +132,19 @@
                                 <i class="ti-headphone"></i>
                                 <div class="content">
                                     <h5>Phone</h5>
-                                    <a href="callto:+01245568695">+012 ) 345 - 548 695</a><br>
-                                    <a href="callto:+012455686">+012 ) 455 - 123</a>
+                                    <a href="callto:+1232807962">+1 232 - 807 - 962</a><br>
+                                    <a href="callto:+12082418474">+1 208- 241- 8474</a><Br>
+                                    <a href="callto:+15178339200">+1 208- 241- 8474</a>
                                 </div>
                             </div>
                             <div class="contact-info-item">
                                 <i class="ti-email"></i>
                                 <div class="content">
                                     <h5>Email</h5>
-                                    <a href="mailto:info@telco.com">info@test.com</a><br>
-                                    <a href="mailto:info@telco.com">demo@test.com</a>
+                                    <a href="mailto:info@telco.com">Info@Ngc-sol.com</a>
+
+                                    <a href="mailto:hr@telco.com">demo@test.com</a>
+
                                 </div>
                             </div>
                             <div class="contact-info-item">
@@ -150,101 +162,106 @@
     </section>
     <!-- End Company Profile Section2 -->
 
-        <!-- Start Track Info Section -->
-   <section class="track-info-sec">
-    <div class="container">
-       <div class="row">
-          <div class="col-md-12 col-lg-12">
-             <div class="text-center">
-                <h2>Lorem Ipsum</h2>
-                <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat turpis sed leo ornare, ut vestibulum mi tempor.
-                   Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
-             </div>
-          </div>            
-       </div>
-    </div>
- </section>
- <!-- End Track Info Section -->
-
- <!-- Start Footer Section -->
- <footer>
-    <div class="container">
-       <div class="row">
-          <div class="col-md-4">
-             <div class="footer-logo">
-                <a class="nav-link pl-0" href="index.html"><img src="images/footer-logo.png" alt=""></a>
-             </div>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua.</p>
-          </div>
-          <div class="col-md-8">
-             <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-5">
-                   <h3>Information</h3>
-                   <ul class="list">
-                      <li><a href="index.html">Home</a></li>
-                      <li><a href="about-us.html">About Us</a></li>
-                      <li><a href="services.html">Services</a></li>
-                      
-                      <li><a href="faq.html">FAQ's</a></li>
-                      <li><a href="contact.html">Contact</a></li>
-                   </ul>
+    <!-- Start Track Info Section -->
+    <section class="track-info-sec">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-12">
+                    <div class="text-center">
+                        <h2>Lorem Ipsum</h2>
+                        <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat
+                            turpis sed leo ornare, ut vestibulum mi tempor.
+                            Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Track Info Section -->
+
+    <!-- Start Footer Section -->
+    <footer>
+        <div class="container">
+            <div class="row">
                 <div class="col-md-4">
-                   <h3>Contact Us</h3>
-                   <ul class="address">
-                      <li><i class="fas fa-map-marker-alt"></i><span>A07 discipline, Down town st, <br>Victory, United
-                            States.</span></li>
-                      <li><i class="fas fa-phone-alt"></i><span>+01 123 456 7899<br>
-                            +01 123 456 7856</span></li>
-                      <li>
-                         <i class="fas fa-envelope"></i>
-                         <span>
-                            <a href="mailto:info@test.com">info@test.com</a>
-                            <br>
-                            <a href="mailto:support@test.com">support@test.com</a>
-                         </span>
-                      </li>
-                   </ul>
+                    <div class="footer-logo">
+                        <a class="nav-link pl-0" href="index.html"><img src="images/footer-logo.png" alt=""></a>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                        commodo consequat.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et
+                        dolore magna
+                        aliqua.</p>
+                </div>
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-md-3"></div>
+                        <div class="col-md-5">
+                            <h3>Information</h3>
+                            <ul class="list">
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about-us.html">About Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+
+                                <li><a href="faq.html">FAQ's</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-md-4">
+                            <h3>Contact Us</h3>
+                            <ul class="address">
+                                <li><i class="fas fa-map-marker-alt"></i><span>A07 discipline, Down town st,
+                                        <br>Victory, United
+                                        States.</span></li>
+                                <li><i class="fas fa-phone-alt"></i><span>+01 123 456 7899<br>
+                                        +01 123 456 7856</span></li>
+                                <li>
+                                    <i class="fas fa-envelope"></i>
+                                    <span>
+                                        <a href="mailto:Info@Ngc-sol.com">Info@Ngc-sol.com</a>
+                                        <!--   <br>
+                                        <a href="mailto:support@test.com">support@test.com</a>
+-->
+                                    </span>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
                 </div>
 
-             </div>
-          </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End Footer Section -->
 
-       </div>
+    <!-- Start Copyright Section -->
+    <div class="copyright-sec">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center content-block d-flex px-0">
+                    <div class="text">
+                        <p>Copyright © <span id="year"></span> CNG. All Rights Reserved</p>
+                    </div>
+                    <div class="footer-menu">
+                        <ul>
+                            <li> <a href="privacy-policy.html">Privacy & Policy.</a>
+                            </li>
+                            <li> <a href="faq.html">Faq.</a>
+                            </li>
+                            <li> <a href="terms-conditions.html">Terms.</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
- </footer>
- <!-- End Footer Section -->
-
- <!-- Start Copyright Section -->
- <div class="copyright-sec">
-    <div class="container">
-       <div class="row">
-          <div class="col-lg-12 text-center content-block d-flex px-0">
-             <div class="text">
-                <p>Copyright © <span id="year"></span> CNG. All Rights Reserved</p>
-             </div>
-             <div class="footer-menu">
-                <ul>
-                   <li> <a href="privacy-policy.html">Privacy & Policy.</a>
-                   </li>
-                   <li> <a href="faq.html">Faq.</a>
-                   </li>
-                   <li> <a href="terms-conditions.html">Terms.</a>
-                   </li>
-                </ul>
-             </div>
-          </div>
-       </div>
-    </div>
- </div>
- <!-- End Copyright Section -->
+    <!-- End Copyright Section -->
     <!--jquery js -->
     <script src="js/jquery-min.js"></script>
     <script src="js/popper.min.js"></script>
@@ -264,10 +281,10 @@
     <script src="js/jquery.meanmenu.min.js"></script>
     <!--OWL Carousel Js-->
     <script src="js/owl.carousel.min.js"></script>
-    <!-- Form Validations --> 
-    <script src="js/form-validation.js"></script> 
-    <!-- Progresscircle Js--> 
-    <script src="js/progresscircle.js"></script> 
+    <!-- Form Validations -->
+    <script src="js/form-validation.js"></script>
+    <!-- Progresscircle Js-->
+    <script src="js/progresscircle.js"></script>
     <!--jquery js -->
     <script src="js/custom.js"></script>
 </body>
