2nd set of changes

--- a/contact.html
+++ b/contact.html
@@ -132,26 +132,29 @@
                                 <i class="ti-headphone"></i>
                                 <div class="content">
                                     <h5>Phone</h5>
-                                    <a href="callto:+1232807962">+1 232 - 807 - 962</a><br>
-                                    <a href="callto:+12082418474">+1 208- 241- 8474</a><Br>
-                                    <a href="callto:+15178339200">+1 208- 241- 8474</a>
+                                    <a href="callto:+17036512773">+1-703-651-2773</a>
                                 </div>
                             </div>
                             <div class="contact-info-item">
                                 <i class="ti-email"></i>
                                 <div class="content">
                                     <h5>Email</h5>
-                                    <a href="mailto:info@telco.com">Info@Ngc-sol.com</a>
+                                    <a href="mailto:Info@Ngc-sol.com">Info@Ngc-sol.com</a>
 
-                                    <a href="mailto:hr@telco.com">demo@test.com</a>
+                                    <a href="mailto:hr@Ngc-sol.com">hr@Ngc-sol.com</a>
 
                                 </div>
                             </div>
                             <div class="contact-info-item">
                                 <i class="ti-map"></i>
                                 <div class="content">
-                                    <h5>Location</h5>
-                                    <p>58 Main road,<br> San Francisco, USA, 20152</p>
+                                    <h5>Location is  USA</h5>
+                                    <p>Aldie, VA, 20105.<br>
+                                        Ellicott City, MD, 21043.<br>
+                                        Prosper, TX, 75078.<br>
+                                        Moorpark, CA, 93021.</p>
+                                        <h5>Location is  India</h5>
+                                    <p>Khairatabad, Hyderabad ,India 500004</p>
                                 </div>
                             </div>
                         </div>
@@ -168,10 +171,8 @@
             <div class="row">
                 <div class="col-md-12 col-lg-12">
                     <div class="text-center">
-                        <h2>Lorem Ipsum</h2>
-                        <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat
-                            turpis sed leo ornare, ut vestibulum mi tempor.
-                            Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
+                        <h2>We want to hear from you</h2>
+                        <p class="mb-0">Drop us an e-mail or give us a call</p>
                     </div>
                 </div>
             </div>
@@ -187,15 +188,11 @@
                     <div class="footer-logo">
                         <a class="nav-link pl-0" href="index.html"><img src="images/footer-logo.png" alt=""></a>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et
-                        dolore magna
-                        aliqua.</p>
+                    <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual funds,
+                        AIFs (alternative investments), pension, wealth managers and corporates around the worl. The
+                        company provides SaaS based end-to-end transaction management, channel management, compliance
+                        solutions, data analytics and various other digital services to asset managers across segments,
+                        as well as outsourcing services for global vendors. </p>
                 </div>
                 <div class="col-md-8">
                     <div class="row">
@@ -217,8 +214,7 @@
                                 <li><i class="fas fa-map-marker-alt"></i><span>A07 discipline, Down town st,
                                         <br>Victory, United
                                         States.</span></li>
-                                <li><i class="fas fa-phone-alt"></i><span>+01 123 456 7899<br>
-                                        +01 123 456 7856</span></li>
+                                <li><i class="fas fa-phone-alt"></i><span>+1-703-651-2773 </span></li>
                                 <li>
                                     <i class="fas fa-envelope"></i>
                                     <span>
