--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -110,13 +110,12 @@
              <div class="footer-logo">
                 <a class="nav-link pl-0" href="index.html"><img src="images/footer-logo.png" alt=""></a>
              </div>
-             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna
-                aliqua.</p>
+             <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual
+               funds,
+               AIFs (alternative investments), pension, wealth managers and corporates around the worl. The
+               company provides SaaS based end-to-end transaction management, channel management, compliance
+               solutions, data analytics and various other digital services to asset managers across segments,
+               as well as outsourcing services for global vendors.</p>
           </div>
           <div class="col-md-8">
              <div class="row">
