3rd Changes push

--- a/contact.html
+++ b/contact.html
@@ -211,9 +211,8 @@
                         <div class="col-md-4">
                             <h3>Contact Us</h3>
                             <ul class="address">
-                                <li><i class="fas fa-map-marker-alt"></i><span>A07 discipline, Down town st,
-                                        <br>Victory, United
-                                        States.</span></li>
+                                <li><i class="fas fa-map-marker-alt"></i><span>24083 Audubon Trail Dr
+                                        <br>Aldie, VA  20105</span></li>
                                 <li><i class="fas fa-phone-alt"></i><span>+1-703-651-2773 </span></li>
                                 <li>
                                     <i class="fas fa-envelope"></i>
