--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,36 +19,36 @@
    <!-- Pre Loader -->
    <div id="dvLoading"></div>
    <!-- Headder -->
-  
+
    <header class="custom-navbar" id="navigation">
       <div class="container">
-          <div class="row px-3">
-              <div class="wow fadeInLeft" data-wow-delay="0.3s">
-                  <!-- Header Logo -->
-                  <div class="header-logo">
-                      <a href="index.html"><img src="images/logo.png" class="img-fluid" alt=""></a>
-                  </div>
-                  <!-- Header Logo end -->
-              </div>
-              <div class="d-flex position-static menu-sec">
-                  <!-- main menu area -->
-                  <nav class="main-menu-area ml-auto mobile-menu-active">
-                      <ul class="main-menu">
-                          <li class="active"><a href="index.html">Home</a></li>
-                          <li><a href="about-us.html">About Us</a></li>
-                          <li><a href="services.html">Services</a></li>
-                          <li><a href="faq.html">FAQ's</a></li>
-                          <li><a href="contact.html">Contact</a></li>
-                      </ul>
-                  </nav>
-                  <!-- main menu area end -->
-                  <!-- Mobile Menu Container -->
-                  <div class="mobile-menu-container"><span class="sr-only">Mobile Menu Will Come Here.</span>
-                  </div>
-              </div>
-          </div>
+         <div class="row px-3">
+            <div class="wow fadeInLeft" data-wow-delay="0.3s">
+               <!-- Header Logo -->
+               <div class="header-logo">
+                  <a href="index.html"><img src="images/logo.png" class="img-fluid" alt=""></a>
+               </div>
+               <!-- Header Logo end -->
+            </div>
+            <div class="d-flex position-static menu-sec">
+               <!-- main menu area -->
+               <nav class="main-menu-area ml-auto mobile-menu-active">
+                  <ul class="main-menu">
+                     <li class="active"><a href="index.html">Home</a></li>
+                     <li><a href="about-us.html">About Us</a></li>
+                     <li><a href="services.html">Services</a></li>
+                     <li><a href="faq.html">FAQ's</a></li>
+                     <li><a href="contact.html">Contact</a></li>
+                  </ul>
+               </nav>
+               <!-- main menu area end -->
+               <!-- Mobile Menu Container -->
+               <div class="mobile-menu-container"><span class="sr-only">Mobile Menu Will Come Here.</span>
+               </div>
+            </div>
+         </div>
       </div>
-  </header>
+   </header>
    <!-- End Navbar -->
 
    <main class="main">
@@ -65,7 +66,7 @@
                            <div class="hero-desc">
                               <h3>instant. simple. smart</h3>
                               <h2 class="hero-title"> pellentesque <span>for <br>too</span> busy lives </h2>
-                              <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p> -->                              
+                              <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p> -->
                            </div>
                         </div>
                      </div>
@@ -84,7 +85,7 @@
                            <div class="hero-desc">
                               <h3>instant. simple. smart</h3>
                               <h2 class="hero-title"> pellentesque <span>for <br> too</span> busy lives </h2>
-                              <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p> -->                              
+                              <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p> -->
                            </div>
                         </div>
                      </div>
@@ -108,11 +109,11 @@
                <div class="single-feature d-flex single-feature-m-top">
                   <div class="single-feature-icon align-items-center pr-3 d-flex">
                      <img src="images/icon1.png" class="img-fluid img-normal" alt="icon1">
-                     <img src="images/icon1-hover.png" class="img-fluid img-hover" alt="icon1-hover">                     
+                     <img src="images/icon1-hover.png" class="img-fluid img-hover" alt="icon1-hover">
                   </div>
                   <div class="text-left">
-                     <h4>Praesent Vehicula</h4>
-                     <p class="mb-0">Lorem ipsum dolor sit amet</p>
+                     <h4>AI & analytics Solutions.</h4>
+                     <p class="mb-0">Artificial Intelligence Services.....</p>
                   </div>
                </div>
             </div>
@@ -123,8 +124,8 @@
                      <img src="images/icon2-hover.png" class="img-fluid img-hover" alt="icon2-hover">
                   </div>
                   <div class="text-left">
-                     <h4>Praesent Vehicula</h4>
-                     <p class="mb-0">Lorem ipsum dolor sit amet</p>
+                     <h4>Cloud Services</h4>
+                     <p class="mb-0">Cloud based servcies...</p>
                   </div>
                </div>
             </div>
@@ -132,11 +133,11 @@
                <div class="single-feature d-flex single-feature-m-bottom">
                   <div class="single-feature-icon align-items-center pr-3 d-flex">
                      <img src="images/icon3.png" class="img-fluid img-normal" alt="icon3">
-                     <img src="images/icon3-hover.png" class="img-fluid img-hover" alt="icon3-hover">   
+                     <img src="images/icon3-hover.png" class="img-fluid img-hover" alt="icon3-hover">
                   </div>
                   <div class="text-left">
-                     <h4>Praesent Vehicula</h4>
-                     <p class="mb-0">Lorem ipsum dolor sit amet</p>
+                     <h4>Cloud Data process</h4>
+                     <p class="mb-0">Cloud based data processing Services...</p>
                   </div>
                </div>
             </div>
@@ -197,7 +198,7 @@
       <div class="container">
          <div class="row">
             <div class="col-lg-6 left-sec">
-               <img class="w-100" src="images/lets-talk.png" alt="lets-talk">               
+               <img class="w-100" src="images/lets-talk.png" alt="lets-talk">
             </div>
             <div class="col-lg-6 right-sec">
                <div class="lets-talk-bg-blue">
@@ -221,20 +222,22 @@
                                     <span class="alert-error"></span>
                                  </div>
                                  <div class="form-group">
-                                    <input type="text" id="phone" name="phone" class="form-control" placeholder="Phone No :" required="" onkeypress="return isNumberKey(event)">
+                                    <input type="text" id="phone" name="phone" class="form-control"
+                                       placeholder="Phone No :" required="" onkeypress="return isNumberKey(event)">
                                     <script>
-                                        function isNumberKey(evt){
-                                  var charCode = (evt.which) ? evt.which : event.keyCode
-                                  if (charCode > 31 && (charCode < 48 || charCode > 57))
-                                    return false;
-                                  return true;
-                                        }    
-                                  </script>
-                                </div>
+                                       function isNumberKey(evt) {
+                                          var charCode = (evt.which) ? evt.which : event.keyCode
+                                          if (charCode > 31 && (charCode < 48 || charCode > 57))
+                                             return false;
+                                          return true;
+                                       }    
+                                    </script>
+                                 </div>
                                  <div class="form-group">
                                     <div class="form-group">
-                                       <input type="text" id="subject" name="subject" class="form-control" placeholder="Service Type" required="">
-                                   </div>
+                                       <input type="text" id="subject" name="subject" class="form-control"
+                                          placeholder="Service Type" required="">
+                                    </div>
                                  </div>
                                  <div class="form-group comments">
                                     <textarea class="form-control" id="message" name="message" required
@@ -242,9 +245,14 @@
                                  </div>
                                  <div class="row">
                                     <div class="col-lg-12">
-                                       <button class="btn" id="submitbtn" type="submit" name="submit" id="submit">Submit</button>
-                                       <div id="successmsg" class="hidden solid #bcbcbc alert alert-success mt-3"> <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> Thank you for contacting us!</div>
-                                    <div id="errormsg" class="hidden solid #bcbcbc alert alert-danger mt-3"> <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a> Failed to submit the form. Try again. </div>	
+                                       <button class="btn" id="submitbtn" type="submit" name="submit"
+                                          id="submit">Submit</button>
+                                       <div id="successmsg" class="hidden solid #bcbcbc alert alert-success mt-3"> <a
+                                             href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                                          Thank you for contacting us!</div>
+                                       <div id="errormsg" class="hidden solid #bcbcbc alert alert-danger mt-3"> <a
+                                             href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                                          Failed to submit the form. Try again. </div>
                                     </div>
                                  </div>
                               </form>
@@ -470,10 +478,11 @@
             <div class="col-md-12 col-lg-12">
                <div class="text-center">
                   <h2>Lorem Ipsum</h2>
-                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat turpis sed leo ornare, ut vestibulum mi tempor.
+                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat
+                     turpis sed leo ornare, ut vestibulum mi tempor.
                      Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
                </div>
-            </div>            
+            </div>
          </div>
       </div>
    </section>
@@ -503,7 +512,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        
+
                         <li><a href="faq.html">FAQ's</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
@@ -511,20 +520,20 @@
                   <div class="col-md-4">
                      <h3>Contact Us</h3>
                      <ul class="address">
-                         <li><i class="fas fa-map-marker-alt"></i><span>24083 Audubon Trail Dr
-                                 <br>Aldie, VA  20105</span></li>
-                         <li><i class="fas fa-phone-alt"></i><span>+1-703-651-2773 </span></li>
-                         <li>
-                             <i class="fas fa-envelope"></i>
-                             <span>
-                                 <a href="mailto:Info@Ngc-sol.com">Info@Ngc-sol.com</a>
-                                 <!--   <br>
+                        <li><i class="fas fa-map-marker-alt"></i><span>24083 Audubon Trail Dr
+                              <br>Aldie, VA 20105</span></li>
+                        <li><i class="fas fa-phone-alt"></i><span>+1-703-651-2773 </span></li>
+                        <li>
+                           <i class="fas fa-envelope"></i>
+                           <span>
+                              <a href="mailto:Info@Ngc-sol.com">Info@Ngc-sol.com</a>
+                              <!--   <br>
                                  <a href="mailto:support@test.com">support@test.com</a>
 -->
-                             </span>
-                         </li>
+                           </span>
+                        </li>
                      </ul>
-                 </div>
+                  </div>
 
                </div>
             </div>
@@ -576,10 +585,10 @@
    <script src="js/jquery.meanmenu.min.js"></script>
    <!--OWL Carousel Js-->
    <script src="js/owl.carousel.min.js"></script>
-   <!-- Form Validations --> 
-   <script src="js/form-validation.js"></script> 
-   <!-- Progresscircle Js--> 
-   <script src="js/progresscircle.js"></script> 
+   <!-- Form Validations -->
+   <script src="js/form-validation.js"></script>
+   <!-- Progresscircle Js-->
+   <script src="js/progresscircle.js"></script>
    <!--jquery js -->
    <script src="js/custom.js"></script>
 </body>
