--- a/services.html
+++ b/services.html
@@ -183,7 +183,7 @@
                   <div class="text-left">
                      <h4>Mobile & IOT solutions</h4>
                      <p class="mb-0">To empower your brand identity, attract customers and solve everyday business
-                        challenges, MWebWare mobile developers use well-proven agile practices, design thinking and
+                        challenges, NGC-Sol, our mobile developers use well-proven agile practices, design thinking and
                         client-focused approach in custom mobile apps development</p>
                   </div>
                </div>
@@ -197,7 +197,7 @@
                   <div class="text-left">
                      <h4>Ent. Business Solutions</h4>
                      <p class="mb-0">Elevate operations, improve outcomes, Advanced solutions for the modern-day
-                        enterprise What makes a business work? At MWebWare, our holistic view of enterprise operations
+                        enterprise What makes a business work? At NGC-Sol, our holistic view of enterprise operations
                         gives us insight into how our customers operate, what they need, and how they can make the most
                         of what they have. Large organizations have unique concerns when functioning in today’s
                         always-on environment. Our consultants help enterprise customers elevate the way they operate,
