--- a/about-us.html
+++ b/about-us.html
@@ -36,13 +36,13 @@
                   <!-- main menu area -->
                   <nav class="main-menu-area ml-auto mobile-menu-active">
                      <ul class="main-menu">
-                         <li><a href="index.html">Home</a></li>
-                         <li class="active"><a href="about-us.html">About Us</a></li>
-                         <li><a href="services.html">Services</a></li>
-                         <li><a href="faq.html">FAQ's</a></li>
-                         <li><a href="contact.html">Contact</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><a href="about-us.html">About Us</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="faq.html">FAQ's</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                      </ul>
-                 </nav>
+                  </nav>
                   <!-- main menu area end -->
                   <!-- Mobile Menu Container -->
                   <div class="mobile-menu-container"><span class="sr-only">Mobile Menu Will Come Here.</span>
@@ -75,7 +75,8 @@
             <div class="col-lg-6 col-md-12 col-sm-12 left-sec">
                <div class="text">
                   <h4>Consectetur Adipiscing</h4>
-                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis nostrud.</h2>
+                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis
+                     nostrud.</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                      totam rem aperiam,
                      eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
@@ -116,7 +117,8 @@
             <div class="col-lg-6 col-md-12 col-sm-12 left-sec">
                <div class="text">
                   <h4>Consectetur Adipiscing</h4>
-                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis nostrud.</h2>
+                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis
+                     nostrud.</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                      totam rem aperiam,
                      eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
@@ -143,7 +145,8 @@
             <div class="col-lg-6 col-md-12 col-sm-12 left-sec">
                <div class="text">
                   <h4>Consectetur Adipiscing</h4>
-                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis nostrud.</h2>
+                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis
+                     nostrud.</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                      totam rem aperiam,
                      eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
@@ -184,11 +187,12 @@
          <div class="row">
             <div class="col-md-12 col-lg-12">
                <div class="text-center">
-                  <h2>Lorem Ipsum</h2>
-                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat turpis sed leo ornare, ut vestibulum mi tempor.
+                  <h2>Creating lasting value for your organization </h2>
+                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat
+                     turpis sed leo ornare, ut vestibulum mi tempor.
                      Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
                </div>
-            </div>            
+            </div>
          </div>
       </div>
    </section>
@@ -202,13 +206,11 @@
                <div class="footer-logo">
                   <a class="nav-link pl-0" href="index.html"><img src="images/footer-logo.png" alt=""></a>
                </div>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                  commodo consequat.
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna
-                  aliqua.</p>
+               <p>NGC-Sol serves the mission-critical needs of digital services managers with clients spanning mutual
+                  funds, AIFs (alternative investments), pension, wealth managers and corporates around the worl. The
+                  company provides SaaS based end-to-end transaction management, channel management, compliance
+                  solutions, data analytics and various other digital services to asset managers across segments,
+                  as well as outsourcing services for global vendors.</p>
             </div>
             <div class="col-md-8">
                <div class="row">
@@ -219,7 +221,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        
+
                         <li><a href="faq.html">FAQ's</a></li>
                         <li><a href="contact.html">Contact</a></li>
                      </ul>
@@ -227,18 +229,18 @@
                   <div class="col-md-4">
                      <h3>Contact Us</h3>
                      <ul class="address">
-                         <li><i class="fas fa-map-marker-alt"></i><span>24083 Audubon Trail Dr
-                                 <br>Aldie, VA  20105</span></li>
-                         <li><i class="fas fa-phone-alt"></i><span>+1-703-651-2773 </span></li>
-                         <li>
-                             <i class="fas fa-envelope"></i>
-                             <span>
-                                 <a href="mailto:Info@Ngc-sol.com">Info@Ngc-sol.com</a>
-                                 
-                             </span>
-                         </li>
+                        <li><i class="fas fa-map-marker-alt"></i><span>24083 Audubon Trail Dr
+                              <br>Aldie, VA 20105</span></li>
+                        <li><i class="fas fa-phone-alt"></i><span>+1-703-651-2773 </span></li>
+                        <li>
+                           <i class="fas fa-envelope"></i>
+                           <span>
+                              <a href="mailto:Info@Ngc-sol.com">Info@Ngc-sol.com</a>
+
+                           </span>
+                        </li>
                      </ul>
-                 </div>
+                  </div>
                </div>
             </div>
 
