--- a/index.html
+++ b/index.html
@@ -273,13 +273,11 @@
       <div class="container">
          <div class="headings-sec">
             <h4><span>Our Best Services</span></h4>
-            <h3 class="section-title mb-3"><span>Neque porro quisquam </span>ipsum quia dolor sit amet</h3>
+            <h3 class="section-title mb-3"><span>Experience improved Cloud software Solutions</span></h3>
             <div class="row">
                <div class="col-lg-3"></div>
                <div class="col-lg-6">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                     aliquip.</p>
+                  <p>From focused approach in custom mobile apps development to Cloud based devops solutons or mass Digital data publication or Data Colltection to analaysis. We have soltuons for your needs..</p>
                </div>
                <div class="col-lg-3"></div>
             </div>
@@ -288,48 +286,48 @@
          <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">Service 1</div>
+                  <div class="plan">Azure  solutons</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/call.png" alt="call">
                   </div>
                   <ul class="services-list mt-2">
-                     <li>Donec pellentesque eget</li>
-                     <li>Orci eget vehicula</li>
-                     <li>Phasellus vel fermentum est</li>
-                     <li>Ut eleifend</li>
+                     <li>Azure infrastructure</li>
+                     <li>Cloud adoption & Leverage federated solutions</li>
+                     <li>Lift and shift Migration</li>
+                     <li>Backup and disaster recovery </li>
                   </ul>
                   <button class="btn mt-3">Read More</button>
                </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">Service 2</div>
+                  <div class="plan">AWS Solutons</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/shield.png" alt="shield">
                   </div>
                   <ul class="services-list mt-2">
-                     <li>Donec pellentesque eget</li>
-                     <li>Orci eget vehicula</li>
-                     <li>Phasellus vel fermentum est</li>
-                     <li>Ut eleifend</li>
+                     <li>Fast Nitro VM's and storage serivces</li>
+                     <li>Agile Stateless functions</li>
+                     <li>Lift and shift Migrations</li>
+                     <li>Backup and disaster recovery </li>
                   </ul>
                   <button class="btn mt-3">Read More</button>
                </div>
             </div>
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">Service 3</div>
+                  <div class="plan">GCP Services</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/service-3.png" alt="service-3">
                   </div>
                   <ul class="services-list mt-2">
-                     <li>Donec pellentesque eget</li>
-                     <li>Orci eget vehicula</li>
-                     <li>Phasellus vel fermentum est</li>
-                     <li>Ut eleifend</li>
+                     <li>Notification servcies</li>
+                     <li>Mobile serivces and allied services</li>
+                     <li>GCP Tensorflow services</li>
+                     <li>Gen AI and Cloud computing serivces</li>
                   </ul>
                   <button class="btn mt-3">Read More</button>
                </div>
@@ -340,6 +338,7 @@
    <!-- End Price Section -->
 
    <!-- Start Blog Section -->
+    <!--
    <section class="section blog-sec">
       <div class="container">
          <h3 class="section-title mb-0"><span>Check it</span> Our Blog Now</h3>
@@ -399,6 +398,7 @@
          </div>
       </div>
    </section>
+   -->
    <!-- End Blog Section -->
 
    <!-- Start Testimonial Section -->
@@ -407,7 +407,7 @@
          <div class="row mt-md-4">
             <div class="col-lg-6 left-sec-img">
                <div class="get-in-touch">
-                  <h3 class="section-title"><span class="f-200">Get In Touch</span><br> With Our Candidates </h3>
+                  <h3 class="section-title"><span class="f-200">Get In Touch</span><br> With Our Collaborators </h3>
                </div>
             </div>
             <div class="col-lg-6">
@@ -477,10 +477,10 @@
          <div class="row">
             <div class="col-md-12 col-lg-12">
                <div class="text-center">
-                  <h2>Lorem Ipsum</h2>
-                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat
-                     turpis sed leo ornare, ut vestibulum mi tempor.
-                     Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
+                  <h2>Experience an improved Cloud Software Solutions development</h2>
+                  <p class="mb-0">Our experience in building Cloud Solutions is gained through cooperating with
+                     companies that follow various business models and operating in various business domains, including
+                     FinTech, Healthcare, e-Commerce and other sectorss. We aim for a value added service solutions.</p>
                </div>
             </div>
          </div>
