--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
                   </div>
                   <div class="text-left">
                      <h4>AI & analytics Solutions.</h4>
-                     <p class="mb-0">Artificial Intelligence Services.....</p>
+                     <p class="mb-0">Artificial Intelligence services.....</p>
                   </div>
                </div>
             </div>
@@ -91,7 +91,7 @@
                   </div>
                   <div class="text-left">
                      <h4>Cloud Services</h4>
-                     <p class="mb-0">Cloud based servcies...</p>
+                     <p class="mb-0">Cloud based services...</p>
                   </div>
                </div>
             </div>
@@ -103,7 +103,7 @@
                   </div>
                   <div class="text-left">
                      <h4>Cloud Data process</h4>
-                     <p class="mb-0">Cloud based data processing Services...</p>
+                     <p class="mb-0">Cloud based data processing services...</p>
                   </div>
                </div>
             </div>
