--- a/about-us.html
+++ b/about-us.html
@@ -74,25 +74,15 @@
 
             <div class="col-lg-6 col-md-12 col-sm-12 left-sec">
                <div class="text">
-                  <h4>Consectetur Adipiscing</h4>
-                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis
-                     nostrud.</h2>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                     totam rem aperiam,
-                     eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                     Nemo enim ipsam
-                     voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-                     qui ratione
-                     voluptatem sequi nesciunt. </p>
-                  <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-                     quia non numquam
-                     eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-                     veniam, quis
-                     nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                     consequatur? Quis autem vel
-                     eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-                     qui dolorem eum
-                     fugiat quo voluptas nulla pariatur?</p>
+                  <h4>Enhanced development procedures </h4>
+                  <h2 class="section-title mb-3"><span class="font-200">Deliver Exceptional </span><br> Technology
+                     Solutions</h2>
+                  <p>With well-versed expertise in a variety of operating systems, networks, and databases. We work with
+                     just
+                     about any technology that a small business would encounter.Expertise that helps customers
+                     with small to mid-sized projects leading to success delivery milestone targets and value. </p>
+                  <p>We are committed to develop innovative software solutions for leading enterprises, helping them
+                     grow their businesses using latest technology solutions</p>
                </div>
 
             </div>
@@ -116,25 +106,16 @@
 
             <div class="col-lg-6 col-md-12 col-sm-12 left-sec">
                <div class="text">
-                  <h4>Consectetur Adipiscing</h4>
-                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis
-                     nostrud.</h2>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                     totam rem aperiam,
-                     eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                     Nemo enim ipsam
-                     voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-                     qui ratione
-                     voluptatem sequi nesciunt. </p>
-                  <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-                     quia non numquam
-                     eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-                     veniam, quis
-                     nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                     consequatur? Quis autem vel
-                     eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-                     qui dolorem eum
-                     fugiat quo voluptas nulla pariatur?</p>
+                  <h4> Enhanced Storage and access procedures </h4>
+                  <h2 class="section-title mb-3"><span class="font-200">Multi-Cloud </span><br> in a single
+                     heterogeneous architecture. </h2>
+                  <p>Multi-Cloud is the utilization of various computing
+                     services in a single heterogeneous architectur </p>
+                  <p>With Multi-Cloud data systems we can leverage the capacity to
+                     enhance data sharing and this aspect helping significantly data users, It enables data owners to
+                     share their
+                     data in the cloud. With cloud computing model, security being paramount we generate value to our
+                     clients with common sharing solutions.</p>
                </div>
             </div>
 
@@ -144,25 +125,16 @@
 
             <div class="col-lg-6 col-md-12 col-sm-12 left-sec">
                <div class="text">
-                  <h4>Consectetur Adipiscing</h4>
-                  <h2 class="section-title mb-3"><span class="font-200">Ut enim ad minim veniam </span><br> Quis
-                     nostrud.</h2>
-                  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                     totam rem aperiam,
-                     eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-                     Nemo enim ipsam
-                     voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-                     qui ratione
-                     voluptatem sequi nesciunt. </p>
-                  <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-                     quia non numquam
-                     eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima
-                     veniam, quis
-                     nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
-                     consequatur? Quis autem vel
-                     eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-                     qui dolorem eum
-                     fugiat quo voluptas nulla pariatur?</p>
+                  <h4>Enhanced Cloud Computing procedures</h4>
+                  <h2 class="section-title mb-3"><span class="font-200">IaaS or PaaS or SaaS </span><br> It's our
+                     expertise.</h2>
+                  <p>Providing a virtualized computing resources, such as servers, storage, and networks, allowing users
+                     to
+                     build and manage their own infrastructure. </p>
+                  <p>Offering a common a platform and environment for developers to build, test, and deploy applications
+                     without worrying about infrastructure management.</p>
+                  <p> Delivering software applications over the internet, allowing users to access and utilize them on
+                     providers subscription basis or dedicated serivces with VPN , express routes.</p>
                </div>
 
             </div>
@@ -188,9 +160,8 @@
             <div class="col-md-12 col-lg-12">
                <div class="text-center">
                   <h2>Creating lasting value for your organization </h2>
-                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat
-                     turpis sed leo ornare, ut vestibulum mi tempor.
-                     Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
+                  <p class="mb-0">Witness the journey of digital transformation and technology solutions, supported by
+                     trust.</p>
                </div>
             </div>
          </div>
