--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="hero-content">
                            <div class="hero-desc">
                               <h3>instant. simple. smart</h3>
-                              <h2 class="hero-title"> pellentesque <span>for <br>too</span> busy lives </h2>
+                              <h2 class="hero-title"> Cloud <span>Solutions for too busy lives </span></h2>
                               <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p> -->
                            </div>
                         </div>
@@ -84,7 +84,8 @@
                         <div class="hero-content">
                            <div class="hero-desc">
                               <h3>instant. simple. smart</h3>
-                              <h2 class="hero-title"> pellentesque <span>for <br> too</span> busy lives </h2>
+                              <h2 class="hero-title">Unlocking <span>the Potentials of Cloud <br> Engineering </span>
+                              </h2>
                               <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p> -->
                            </div>
                         </div>
@@ -180,8 +181,8 @@
          <div class="row align-items-center">
             <div class="col-lg-6 col-md-6 col-sm-12 left-sec">
                <div class="text">
-                  <p class="mb-1">Do You Have a</p>
-                  <h2 class="mb-3">Nunc vitae nunc mollis.</h2>
+                  <p class="mb-1">Do You Have a Solutions need?</p>
+                  <h2 class="mb-3">Drop us an e-mail or give us a call with your requirements.</h2>
                   <a href="contact.html" class="btn">GET A QUOTE</a>
                </div>
             </div>
@@ -277,7 +278,8 @@
             <div class="row">
                <div class="col-lg-3"></div>
                <div class="col-lg-6">
-                  <p>From focused approach in custom mobile apps development to Cloud based devops solutons or mass Digital data publication or Data Colltection to analaysis. We have soltuons for your needs..</p>
+                  <p>From focused approach in custom mobile apps development to Cloud based devops solutons or mass
+                     Digital data publication or Data Colltection to analaysis. We have soltuons for your needs..</p>
                </div>
                <div class="col-lg-3"></div>
             </div>
@@ -286,7 +288,7 @@
          <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-4">
                <div class="price-box">
-                  <div class="plan">Azure  solutons</div>
+                  <div class="plan">Azure solutons</div>
                   <h3 class="most-popular">Most Popular</h3>
                   <div class="head">
                      <img src="images/call.png" alt="call">
@@ -338,7 +340,7 @@
    <!-- End Price Section -->
 
    <!-- Start Blog Section -->
-    <!--
+   <!--
    <section class="section blog-sec">
       <div class="container">
          <h3 class="section-title mb-0"><span>Check it</span> Our Blog Now</h3>
@@ -423,11 +425,10 @@
                                  alt="">
                            </div>
                            <h4>Josi Welleam</h4>
-                           <h6>Founder, Variations</h6>
-                           <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                              suffered alteration in
-                              some form, by injected humour, or randomised words which don't look even slightly
-                              believable.
+                           <h6>Founder</h6>
+                           <p>With development process based on agile methodologies,Scrum regular project
+                              updates, live demos and the best market practices NGC-Sol made sure that we are up-to-date
+                              with everything.
                            </p>
                            <div class="social-icons">
                               <a href="javascript:void(0)"><i class="flaticon-facebook"></i></a>
@@ -445,9 +446,10 @@
                            </div>
                            <h4>Jenny Jo</h4>
                            <h6>Co Founder, Variations</h6>
-                           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et dapibus tortor.
-                              Suspendisse orci ante, vestibulum at libero ac, vulputate vulputate sem. Cras quis
-                              lorem condimentum, ornare mi molestie.
+                           <p>We know that quality assurance is an important part of their development process. This is
+                              why, apart from manual tests, they alos perform automated ones – using custom E2E testing
+                              frameworks to ensure they stand up to market standards and trends. Which is a real bonus
+                              on top of their serivcess.
                            </p>
                            <div class="social-icons">
                               <a href="javascript:void(0)"><i class="flaticon-facebook"></i></a>
