--- a/faq.html
+++ b/faq.html
@@ -72,20 +72,21 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-head"><h2 class="section-title">Frequently Asked <span class="primary-color">Questions !!</span></h2>
-                           <p>Sodales imperdiet nunc quia omnis maecenas cubilia, purus, dolor! Est volutpat aliquid, elit excepturi.Laoreet! Sodales imperdiet nunc quia omnis maecenas.</p>
+                           <p>Do you spend most of your IT budget on maintaining your current system? Many companies find that constant maintenance eats into their budget for new technology. By outsourcing your IT management to us, you can focus on what you do best--running your business.</p>
+                           <p>Below are some of Frequently asked question by our clients that jotted to for quick update:</p>
                         </div>
                         <div id="accordion-tab-one" class="accordion-content" role="tablist">
                            <div id="accordion-A" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="accordion-A">
                               <div class="card-header" role="tab" id="qus-A">
                                  <h5 class="mb-0">
                                     <a data-toggle="collapse" href="#collapse-one" aria-expanded="true" aria-controls="collapse-one">
-                                       How we became best among others ?
+                                       What is cloud computing?
                                     </a>
                                  </h5>
                               </div>
                               <div id="collapse-one" class="collapse show" data-parent="#accordion-tab-one" role="tabpanel" aria-labelledby="qus-A">
                                  <div class="card-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                    Cloud computing is a delivery model that provides highly scalable, on-demand access to computer resources, including CPUs, storage, networking and other hosted software services.
                                  </div>
                               </div>
                            </div>
@@ -99,7 +100,7 @@
                               </div>
                               <div id="collapse-two" class="collapse" data-parent="#accordion-tab-one" role="tabpanel" aria-labelledby="qus-B">
                                  <div class="card-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                    <i>Technical Experience</i>: &nbsp;We are well-versed in a variety of operating systems, networks, and databases. We work with just about any technology that a small business would encounter. We use this expertise to help customers with small to mid-sized projects.
                                  </div>
                               </div>
                            </div>
@@ -113,7 +114,8 @@
                               </div>
                               <div id="collapse-three" class="collapse" data-parent="#accordion-tab-one" role="tabpanel" aria-labelledby="qus-C">
                                  <div class="card-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                    <i>With High ROI</i>: &nbsp;The world of Cloud technology serices  our goal is to provide experience that is tailored to your company's needs. No matter the budget, we pride ourselves on providing professional customer service. We guarantee you will be satisfied with our work.
+
                                  </div>
                               </div>
                            </div>
@@ -121,13 +123,15 @@
                               <div class="card-header" role="tab" id="qus-D">
                                  <h5 class="mb-0">
                                     <a class="collapsed" data-toggle="collapse" href="#collapse-four" aria-expanded="true" aria-controls="collapse-four">
-                                       How we raise fund for charity ?
+                                       What are the types of cloud?
                                     </a>
                                  </h5>
                               </div>
                               <div id="collapse-four" class="collapse" data-parent="#accordion-tab-one" role="tabpanel" aria-labelledby="qus-D">
                                  <div class="card-body">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+                                    Clouds can be public or private, though public clouds are more commonly associated with cloud computing. Public cloud platforms, such as AWS and Microsoft Azure, pool resources in data centers often distributed around the globe, and users access them via the internet. Resources are provided to customers through metered services, and the cloud vendor is responsible for varying degrees of back-end maintenance.
+
+                                    Private clouds are walled-off environments hosted in a corporate data center or a colocation facility. They lack the massive scale of public clouds. But they do have some elasticity, and a company's developers and administrators can still use self-service portals to access resources. In theory, private clouds provide greater control and security, though it's up to a company's IT team to ensure that happens.
                                  </div>
                               </div>
                            </div>
@@ -136,7 +140,7 @@
                    <div class="col-lg-6">
                       <div class="qsn-form-container">
                          <h3>Still have a questions ?</h3>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullam corper</p>
+                         <p>Drop us an e-mail or give us a call with your queries..</p>
                          <form>
                             <p>
                                <input type="text" name="name" required placeholder="Your Name*">
@@ -152,6 +156,12 @@
                             </p>
                             <p>
                                <button class="btn" type="submit" name="submit">SUBMIT QUESTIONS</button>
+                               <div id="successmsg" class="hidden solid #bcbcbc alert alert-success mt-3"> <a
+                                 href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+                             Thank you for contacting us!</div>
+                         <div id="errormsg" class="hidden solid #bcbcbc alert alert-danger mt-3"> <a href="#"
+                                 class="close" data-dismiss="alert" aria-label="close">&times;</a> Failed to
+                             submit the form. Try again. </div>
                             </p>
                          </form>
                       </div>
@@ -168,9 +178,9 @@
          <div class="row">
             <div class="col-md-12 col-lg-12">
                <div class="text-center">
-                  <h2>Lorem Ipsum</h2>
-                  <p class="mb-0">Proin ornare ultrices mi eu auctor. Fusce suscipit bibendum ante. Duis consequat turpis sed leo ornare, ut vestibulum mi tempor.
-                     Aliquam turpis urna, suscipit ut leo quis, scelerisque sagittis eros.</p>
+                  <h2>Still have doubts or have questions?</h2>
+                  <p class="mb-0">Drop us an e-mail or give us a call with your queries..</p>
+                  <a href="contact.html" class="btn">Drop us your questions</a>
                </div>
             </div>            
          </div>
